--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,6 +1,8 @@
 # Introduction
  
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+Welcome to Just Da Notes. This app is intended to share notes taken on interesting developer topics, from every day functions, to methodology, architecture, design and even certifications.
+
+Feel free to browse. This app was built using Nextra.
 
 ## What is Nextra?
 
