--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -1,3 +1,5 @@
 # About
 
-This is the about page! This page is shown on the navbar.
+Hey there, this is my notes app where you will find notes I take on intersting developer topics. 
+
+For more information about who I am and what I do, you can check out the main app at https://www.salmanmalik.co/
