some more stuff

--- a/pages/Certifications/Google/Digital_Cloud_Leader_Notes.mdx
+++ b/pages/Certifications/Google/Digital_Cloud_Leader_Notes.mdx
@@ -1,565 +1,235 @@
 # Digital Cloud Leader Notes
 
-What is the Cloud?
+## What is the Cloud?
 	1. Metaphor for network of datacenters that do stuff for the internet
-Types of Cloud
-	1. On-premises (On prem)
-		a. Hosted on site
-		b. Located and operated within an organization's data center
-		c. Traditional way of managing IT infrastructure
-		d. Doesn't require third-party access
-		e. Owners have physical control
-			i. Need servers that 
-				1) Require physical space
-				2) A specialized room
-				3) Require expert personnel
-				4) Difficult scale
-				5) Acquire more computing than actually needed
+## Types of Cloud
+	1. On-premises *On prem*
+		- Hosted on site
+		- Located and operated within an organization's data center
+		- Traditional way of managing IT infrastructure
+		- Doesn't require third-party access
+		- Owners have physical control
+			- Need servers that 
+				1. Require physical space
+				2. A specialized room
+				3. Require expert personnel
+				4. Difficult scale
+				5. Acquire more computing than actually needed
 	2. Private Cloud
-		a. Dedicated to a single organization
-		b. Single-tenant or corporate cloud
-		c. Benefits
-			i. Self service
-			ii. Scalability
-			iii. Elasticity
+		- Dedicated to a single organization
+		- Single-tenant or corporate cloud
+		- Benefits
+			- Self service
+			- Scalability
+			- Elasticity
 	3. Public Cloud
-		a. On-demand availability of computing and infrastructure resources
-		b. No need to acquire, config, or manage resources
-		c. Pay only for what is used
-		d. Cloud computing service models
-			i. IaaS
-			ii. PaaS
-			iii. SaaS
+		- On-demand availability of computing and infrastructure resources
+		- No need to acquire, config, or manage resources
+		- Pay only for what is used
+		- Cloud computing service models
+			- IaaS
+			- PaaS
+			- SaaS
 	4. Hybrid Cloud
-		a. Combine public and private cloud environments
+		- Combine public and private cloud environments
 	5. Multicloud
-		a. Combine two public cloud provider environments
-		b. Most orgs embrace a multicloud strategy
+		- Combine two public cloud provider environments
+		- Most orgs embrace a multicloud strategy
 
-Benefits of cloud computing
+## Benefits of cloud computing
 	1. Access to scalable resources
 	2. Latest technology on-demand
 	3. Accelerates deployment time
 	4. Flexible
-		a. Access services from anywhere
-		b. Scale services up
-		c. Scale services down
+		- Access services from anywhere
+		- Scale services up
+		- Scale services down
 	5. Agile
-		a. Develop new applications
-		b. Rapidly get them into production
-		c. No infrastructure worries
+		- Develop new applications
+		- Rapidly get them into production
+		- No infrastructure worries
 	6. Strategic Value
-		a. Competitive advantages
-		b. Higher ROI
-		c. Innovate and try new ideas (faster)
+		- Competitive advantages
+		- Higher ROI
+		- Innovate and try new ideas .faster.
 	7. Secure
-		a. Stronger than enterprise data centers
-		b. Depth and breadth of mechanisms
-		c. Dedicated teams
+		- Stronger than enterprise data centers
+		- Depth and breadth of mechanisms
+		- Dedicated teams
 	8. Cost-effective
-		a. Pay for what is used
-		b. No overbuilding data centers
-		c. IT staff can work on strategic initiatives
+		- Pay for what is used
+		- No overbuilding data centers
+		- IT staff can work on strategic initiatives
 
-Cloud Eras
+## Cloud Eras
 	1. VM Cloud Era
 	2. Infrastructure Cloud Era
 	3. Transformation Cloud Era
 
-Google Transformation Cloud (review this)
+## Google Transformation Cloud .review this.
 	1. Data
 	2. Open infrastructure
 	3. Collaboration
 	4. Trust
 	5. Sustainable technology
 
-Google Cloud Adoption Framework
+## Google Cloud Adoption Framework
 	1. Provides assessment of where an org is in its cloud journey
 	2. Creates plan to get the org to where it wants to be in their cloud journey
 	3. Cloud maturity assessment
 
-Fundamental Cloud Concepts
-	1. Total Cost of Ownership (TCO Analysis)
+## Fundamental Cloud Concepts
+	1. Total Cost of Ownership .TCO Analysis.
 	2. On-Premises Costs Include
-		a. Power
-		b. Cooling
-		c. Maintenance
-		d. Support services
+		- Power
+		- Cooling
+		- Maintenance
+		- Support services
 	3. CapEx v. OpEx
-		a. CapEx = Upfront business expenses put toward fixed assets
-		b. OpEx = Recurring costs for a more immediate benefit
+		- CapEx = Upfront business expenses put toward fixed assets
+		- OpEx = Recurring costs for a more immediate benefit
 	4. Cloud cost savings include
-		a. Power
-		b. Cooling
-		c. Floorspace
-		d. Management
-		e. Equipment
+		- Power
+		- Cooling
+		- Floorspace
+		- Management
+		- Equipment
 	5. Private Cloud
-		a. Own data center
-		b. Self service
-		c. Scalability
-		d. Elasticity
+		- Own data center
+		- Self service
+		- Scalability
+		- Elasticity
 	6. Multi Cloud
-		a. Combine two public cloud providers
+		- Combine two public cloud providers
 	7. Hybrid Cloud
-		a. Combine private and public cloud environments
-	8. Multi-cloud strategies
-		a. Access to the latest technologies
-			i. Best in class approach to cloud features
-			ii. Scale, security, and agility to innovate fast
-			iii. Advanced capabilities
-		b. Modernize at the right pace
-			i. Migrate at a pace that makes sense
-			ii. Transform technical infrastructure over time
-		c. Improved return on investment
-			i. Expand cloud computing capacity without increasing data center expenses
-			ii. Reduce CapEx or general IT spending
-			iii. Improve transparency
-		d. Flexibility through choice of tools
-			i. Wider choice of tools and developer talent
-			ii. Better response to changing market demands
-			iii. Avoid vendor lock-in concerns
-		e. Improve reliability and resiliency
-			i. Distribute core workloads across multiple cloud and on-premises infrastructures
-			ii. Reduce downtime
-			iii. Reduce concerns about over-dependence on a single source of failure
+		- Combine private and public cloud environments
+	8. Mult-cloud strategies
+		- Access to the latest technologies
+			- Best in class approach to cloud features
+			- Scale, security, and agility to innovate fast
+			- Advanced capabilities
+		- Modernize at the right pace
+			- Migrate at a pace that makes sense
+			- Transform technical infrastructure over time
+		- Improved return on investment
+			- Expand cloud computing capacity without increasing data center expenses
+			- Reduce CapEx or general IT spending
+			- Improve transparency
+		- Flexibility through choice of tools
+			- Wider choice of tools and developer talent
+			- Better response to changing market demands
+			- Avoid vendor lock-in concerns
+		- Improve reliability and resiliency
+			- Distribute core workloads across multiple cloud and on-premises infrastructures
+			- Reduce downtime
+			- Reduce concerns about over-dependence on a single source of failure
 			iv. Improve quality and availability of a service
 		f. Maintain regulatory compliance
-			i. Ensure compliance with regional data governance, residency, or digital sovereignty requirements
+			- Ensure compliance with regional data governance, residency, or digital sovereignty requirements
 		g. Running apps on-premises
-			i. Freedom to innovate while still meeting legacy technology needs
+			- Freedom to innovate while still meeting legacy technology needs
 		h. Running apps at remote edge locations
-			i. Meet performance and latency requirements
-			ii. Run select apps at the network edge
+			- Meet performance and latency requirements
+			- Run select apps at the network edge
 	9. Network performance
 	10. Google Cloud regions and zone
-		a. Locations
-			i. NA
-			ii. SA
-			iii. Europe
+		- Locations
+			- NA
+			- SA
+			- Europe
 			iv. Asia
 			v. Australia
-		b. Locations > Regions > Zones
-		c. Multi-region, store data in multiple regions that are 160km apart
-		d. cloud.google.com/about/locations
+		- Locations > Regions > Zones
+		- Mult-region, store data in multiple regions that are 160km apart
+		- clou-googl-com/about/locations
 	11. Google's edge network
-		a. Store popular content near users
-		b. Low latency
-		c. Network's edge = entry point to the network
-		d. High performance
-		e. High reliability
+		- Store popular content near users
+		- Low latency
+		- Network's edge = entry point to the network
+		- High performance
+		- High reliability
 		f. Low latency
 	12. Cloud computing service models
-		a. 
-		b.  Infrastructure as a service (IaaS)
-			i. Compute, networking, storage, databases
-			ii. Lease resources, only pay for what you use
-			iii. Reduce CapEx
+		-  Infrastructure as a service *IaaS*
+			- Compute, networking, storage, databases
+			- Lease resources, only pay for what you use
+			- Reduce CapEx
 			iv. Compute engine
 			v. Cloud storage
-			vi. Benefits:
-				1) Economical
-				2) Efficient
-				3) Boosts productivity
-				4) Reliable - no single point of failure
-				5) Scalable - up and down rapidly
-			vii. Use Cases:
-				1) Unpredictable workload volumes or need to move quickly in response to business fluctuations
-				2) Require more infrastructure scalability and agility than traditional data centers can provide
-				3) High business growth that outpaces infrastructure capabilities
-				4) Unpredictable spikes in demand for infrastructure services
-				5) Low utilization of existing infrastructure resources
-		c. Platform as a service (PaaS)
-			i. Provides a platform for developers to develop, run, and manage their own apps
-			ii. No need to build and maintain the associated infrastructure
-			iii. Can use built-in software components to build applications
+			v- Benefits:
+				1. Economical
+				2. Efficient
+				3. Boosts productivity
+				4. Reliable - no single point of failure
+				5. Scalable - up and down rapidly
+			v- Use Cases:
+				1. Unpredictable workload volumes or need to move quickly in response to business fluctuations
+				2. Require more infrastructure scalability and agility than traditional data centers can provide
+				3. High business growth that outpaces infrastructure capabilities
+				4. Unpredictable spikes in demand for infrastructure services
+				5. Low utilization of existing infrastructure resources
+		- Platform as a service *PaaS*
+			- Provides a platform for developers to develop, run, and manage their own apps
+			- No need to build and maintain the associated infrastructure
+			- Can use built-in software components to build applications
 			iv. Cloud Run
-				1) Fully managed serverless platform
-				2) Develop and host applications
+				1. Fully managed serverless platform
+				2. Develop and host applications
 			v. Big Query
-				1) Enterprise data warehouse
-				2) Manage and analyze data
-			vi. Benefits:
-				1) Developers can go straight to coding
-				2) No need to spend time setting up and maintaining a development environment
-				3) Faster time to market
-				4) Scalable
-				5) Reduces management - abstracts the management
-				6) Flexible - support for different programming languages and easy collaboration with distributed teams
-				7) Use Cases:
-					a) Create unique and custom applications without investing in owning and managing infrastructure
-					b) Rapidly test and deploy applications
-					c) Have legacy applications and want to reduce the cost of operations
-					d) Have a new app project that they want to deploy quickly by growing and updating the app as fast as possible
-					e) Want to only pay for resources while they're being used
-					f) Want to offload time-consuming tasks such as setting up and maintaining application servers and development and testing environments
-		d. Software as a service (Saas)
-			i. Abstracts technology completely from the consumer
-			ii. The end user doesn't need to care about the underlying infrastructure
-			iii. Organizations pay a subscription fee for access to a ready-to-use software product
+				1. Enterprise data warehouse
+				2. Manage and analyze data
+			v- Benefits:
+				1. Developers can go straight to coding
+				2. No need to spend time setting up and maintaining a development environment
+				3. Faster time to market
+				4. Scalable
+				5. Reduces management - abstracts the management
+				6. Flexible - support for different programming languages and easy collaboration with distributed teams
+				7. Use Cases:
+					- Create unique and custom applications without investing in owning and managing infrastructure
+					- Rapidly test and deploy applications
+					- Have legacy applications and want to reduce the cost of operations
+					- Have a new app project that they want to deploy quickly by growing and updating the app as fast as possible
+					- Want to only pay for resources while they're being used
+					f. Want to offload time-consuming tasks such as setting up and maintaining application servers and development and testing environments
+		- Software as a service *Saas*
+            - Abstracts technology completely from the consumer
+			- The end user doesn't need to care about the underlying infrastructure
+			- Organizations pay a subscription fee for access to a ready-to-use software product
 			iv. Google Workspace
 			v. Benefits:
-				1) Low maintenance - Eliminates the need to have IT staff download and install applications
-				2) Vendors manage all potential technical issues
-				3) Helps to streamline maintenance and support for an organization
-				4) Cost effective 
-					a) Fixed monthly or annual account fee
-					b) Predictable costs and per-user budgeting
-					c) Clear financial governance
-				5) Flexible
-					a) Everything is available over the internet
-					b) Access to the software from anywhere, any device, anytime
-				6) Use Cases:
-					a) Want to use standard software solutions that require minimum customizations
-					b) Don’t want to invest time or internal expertise in maintaining applications or infrastructure
-					c) Need more time for IT teams to focus on strategic projects
-					d) Need to access apps from various devices and locations
+				1. Low maintenance - Eliminates the need to have IT staff download and install applications
+				2. Vendors manage all potential technical issues
+				3. Helps to streamline maintenance and support for an organization
+				4. Cost effective 
+					- Fixed monthly or annual account fee
+					- Predictable costs and per-user budgeting
+					- Clear financial governance
+				5. Flexible
+					- Everything is available over the internet
+					- Access to the software from anywhere, any device, anytime
+				6. Use Cases:
+					- Want to use standard software solutions that require minimum customizations
+					- Don’t want to invest time or internal expertise in maintaining applications or infrastructure
+					- Need more time for IT teams to focus on strategic projects
+					- Need to access apps from various devices and locations
 	13. Choosing a cloud model
-		a. IaaS - A highly flexible scalable service, while maintaining control of infrastructure
-		b. PaaS - A platform designed for building software products
-		c. SaaS - Ready to use features without the hassle of installations
+		- IaaS - A highly flexible scalable service, while maintaining control of infrastructure
+		- PaaS - A platform designed for building software products
+		- SaaS - Ready to use features without the hassle of installations
 	14. The Shared Responsibility Model
-		a. Security in the cloud is a shared responsibility between the cloud provider and the customer
-		b. Customer secures data
-		c. Cloud provider secures infrastructure
-		d. Security of the cloud v. Security in the cloud
-		e. According to Gartner, 99% of cloud security failures will result from user error
-			i. id10T error
+		- Security in the cloud is a shared responsibility between the cloud provider and the customer
+		- Customer secures data
+		- Cloud provider secures infrastructure
+		- Security of the cloud v. Security in the cloud
+		- According to Gartner, 99% of cloud security failures will result from user error
+			- id10T error
 		f. How the shared responsibility model works
 		g. 
 		h. General guideline for responsibility is: "If you configure or store it, you're responsible for securing it."
-		i. Cloud Provider	Customer
-		Hardware	Configurations
-		Networks	Access policies
-		Physical security	User data
-		
-			i. 
 
-Innovating with Data and Google Cloud
-	1. The role of data
-		a. Data is any information that is useful to an organization
-			i. Documents
-			ii. Emails
-			iii. Audio files
-			iv. Video files
-			v. Images
-			vi. And even ideas in users' minds
-		b. Structured v. Unstructured Data
-			i. Structured Data is highly organized. Examples include customer records consisting of names, addresses, credit card numbers, and other quantitative data. Structured data can be easily stored and managed in databases
-			ii. Unstructured Data has no organization and tends to be qualitative. Examples of unstructured data include processing documents, audio files, images, and videos.
-				1) Some unstructured data can be stored in a format called a BLOB, Binary Large Object
-				2) Images, audio, and multimedia files can all be stored as BLOBs
-	2. Data consolidation and analytics
-		a. Google Services used with specific data types:
-			i. 
-		b. Migrating your data to the cloud
-			i. bruh
-		c. Cloud databases
-			i. Database = An organized collection of data, generally stored in tables and accessed electronically from a computer system
-			ii. Data management priorities
-				1) Data integrity
-				2) Scale
-			iii. Google Database Services
-				1) Cloud SQL - Fully managed, storage scales automatically, use for websites, ecommerce, business intelligence
-				2) Cloud Spanner - Fully managed, designed for global scale, data is automatically copied across regions, queries always return consistent results regardless of region
-		d. Cloud data warehouses
-			i. Data warehouses are built to enable rapid analysis of large and multidimensional data sets
-			ii. Data warehouses can transform unstructured data into semi-structured data on which it can run analyses.
-			iii. Google Datawarehouse Service
-				1) Big Query
-					a) Analyze petabytes of data at fast speed
-					b) Zero operational overhead
-					c) Serverless
-					d) Do not pay for compute power unless you're running a query
-		e. Cloud data lakes
-			i. A data lake is a repository that is designed to store, process, and secure large amounts of structured, semi-structured, and unstructured data
-			ii. A repository of raw data and tend to hold 'back up' data
-			iii. Can store vast amounts of data in native format
-			iv. Enables easy data analyses by transforming and consolidating data
-			v. Data lakes are often made up of many different products
-			vi. Google Cloud Storage is great for BLOB storage
-				1) Can store unlimited data
-				2) No minimum data amount
-				3) Low latency
-				4) Can access from anywhere in the world
-				5) Multi-regional storage
-				6) Storage Classes
-					a) Nearline Storage
-						i) Access less than once a month
-					b) Coldline Storage
-						i) Access at most 90 days or quarter
-					c) Archive Storage
-						i) Accessed once a year
-		f. Business intelligence solutions
-			i. Looker - Google cloud BI solution
-				1) Sits on top of analytics db to help analyze data
-				2) Can combine behavioral and marketing data to build insights
-				3) Leverages data warehouses like big query to make this data useful
-				4) Can be used to create real-time dashboards
-	3. Innovation with Machine Learning
-		a. What is machine learning
-			i. Artificial Intelligence is a broad field or term that describes any kind of machine capable of a task that normally requires human intelligence, such as visual perception, speech recognition, decision-making, or translation between languages
-			ii. Machine Learning is a branch of AI and refers to computers that can "learn" from data and make predictions or decisions without being explicitly programmed to do so. This is done using algorithms or models to analyze data. These algorithms use historical data as input to predict new output values.
-				1) 
-			iii. ML teaches a computer to solve problems by feeding it the write answers.
-		b. Data quality
-			i. ML algorithms are imperfect and make mistakes
-			ii. Qualities of good data
-				1) It has coverage
-					a) Data coverage refers to the scope of and all possible scenarios the data can account for
-				2) It's clean
-					a) Data cleanliness (aka data consistency), "dirt" or "inconsistency" in data refers to anything that can prevent the model from making accurate predictions or understanding data behavior
-					b) i.e. mislabeling data for machine learning
-				3) It's complete
-					a) Data completeness refers to the availability of sufficient data about the world to replace human knowledge
-					b) Incomplete data can limit the performance of the ML model
-		c. AI and ML with Google Cloud
-			i. 
-			ii. Vertex AI - a unified managed platform in Google Cloud for using AI/ML
-				1) Use data to train existing ml model or build custom ml model
-					a) Auto ML - train, test, deploy ML model without code
-						i) Upload training data and test model without a single line of code
-				2) Create custom end to end AI/ML models
-				3) Google Cloud AI Hub - Repo of plug and play AI components
-			iii. Google Cloud Pre-trained APIs - fastest but least customizable approach
-				1) Analyze text, video, images, etc
-				2) Sight, language, conversation, structured data
-				3) Vision API - detect faces, objects, text, and even sentiment
-				4) Natural language API - contact form on website, receives many messages, natural language API discovers syntax, entities and sentiment to determine if comments are complaints, praise, or inquiries to learn about your business
-			iv. AI Solutions
-				1) Contact Center AI - transforms contact centers in how to communicate with customers
-				2) Document AI - analyze documents and stuff
-				3) Cloud Talent Solution - Job search stuff
-				4) Tensor Flow - open source tool is part of this
-			v. Google cloud democratized AI by all the above
-		d. Real world use cases for ML
-			i. RankBrain - Google's deep neural network for ranking search results
-				
-Infrastructure and Application Modernization with Google Cloud
-	1. Infrastructure Modernization
-		a. On demand self service
-			i. Cloud reduces the need for an IT team to act as a gateway for compute and other cloud services
-		b. Broad network access
-		c. Resource pooling - global network of data centers
-		d. Rapid elasticity - scale up and down quickly
-		e. Measure service - lower CapEx
-	2. Understanding Compute Options in the Cloud
-		a. Virtual Machines
-			i. Share same pool of computer processing and blah blah blah dude
-			ii. Hypervisor - A hypervisor sits on top of physical hardware, and multiple VMs are built on top of it. It's akin to having multiple computers that only use one piece of hardware
-				1) 
-		b. Containerization
-			i. Follow same principle as VMs
-			ii. Even more efficient than VMs
-				1) VMs recreate a full representation of the hardware
-				2) Containers only virtualize the OS
-					a) Contain exactly what's needed for the application they support
-			iii. Start faster than VMs
-			iv. Use a fraction of the memory of VMs
-			v. Create predictable environments that are isolated from other applications
-			vi. Containers
-				1) Improve agility
-				2) Strengthen security
-				3) Optimize resources
-				4) Simplify managing applications in the cloud
-				5) Kubernetes
-					a) An open-source cluster management system that provides automated container orchestration
-					b) Improves application reliability
-					c) Faster, more agile application development
-					d) Peace of mind - bruh
-		c. Serverless Computing
-			i. Doesn't mean there's no server bro
-	3. Hybrid and multicloud
-	4. Google Cloud Compute Solutions
-		a. VM Based compute options
-			i. Compute Engine
-				1) Create and run virtual machines on Google's infrastructure
-					a) Scalable, high performance virtual machines
-					b) Boot quickly
-					c) Persistent disk storage
-					d) Consistent performance
-			ii. VMWare Engine
-				1) Fully managed service that let's you run VMWare in the cloud
-				2) Google manages the infrastructure, networking, and management services
-			iii. Bare Metal
-				1) Enables you to migrate specialized workloads to the cloud
-		b. Container based compute option
-			i. Google Kubernetes Engine
-				1) GKE provides a managed environment for deploying, managing and scaling
-		c. Serverless Computing
-			i. Cloud Run
-				1) Allows developer to build apps in their programming languages and use the dependencies they want to use
-			ii. Cloud Functions
-				1) A serverless execution environment for building shit
-				2) Scalable, pay as you go functions
-			iii. App Engine <--- look this shit up
-	5. Modernizing Applications with Google Cloud
-		a. Cloud change patterns
-			i. Move applications first and then change them
-			ii. Change applications before they move
-			iii. Invent in greenfield
-			iv. Invent in brownfield
-			v. Move applications without any changes
-		b. Challenges in application development
-			i. Outnumber cloud native app development typically
-			ii. Too much time spent maintaining infrastructure
-			iii. Devs wanna dip because of bullshit infrastructure work
-			iv. Adopt CI/CD to overcome challenges
-		c. Google Kubernetes Engine (GKE)
-			i. Automated container orchestration system
-			ii. Google cloud managed service
-			iii. Easy to deploy, manage, and update services and applications
-		d. App Engine
-			i. Manages hardware and network required to run the application
-			ii. Will scale automatically to support the application
-			iii. Google manages the apps availability
-			iv. No services to provision or maintain
-			v. A platform for building scalable web applications and mobile backends
-	6. The Value of APIs
-		a. Legacy system challenges
-			i. Shit sucks basically
-		b. How APIs can modernize legacy systems
-			i. API = Application Programming Interface
-			ii. Enable faster innovation
-		c. Using APIs to create new business value
-			i. Sure dude
-		d. Apigee
-			i. Infrastructure and application development gaps
-				1) The more complex the digital ecosystem gets the more time it takes to manage and update
-			ii. How Apigee addresses these gaps
-				1) Includes developer services
-				2) Can register their applications
-				3) Has analytics services
-		e. A critical outcome of API management
-			i. Measuring and tracking business performance
-
-Understanding Google Cloud Security and Operations
-	1. Financial Governance in the Cloud
-		a. Fundamentals of cloud cost management
-			i. People
-				1) Roles around managing cloud cost - Finance team
-				2) Partnership across Finance, Business, and Technology teams
-				3) Cloud Center of Excellence - centralized group
-			ii. Process
-				1) Monitor cloud usage and cost on a weekly and monthly basis
-				2) Create culture of accountability for teams using the cloud
-			iii. Technology
-				1) Google Cloud has native tools to monitor and manage the cost
-					a) Visibility
-					b) Accountability
-					c) Control
-					d) Intelligence
-		b. Total cost of ownership
-			i. A comprehensive assessment of all the layers associated with the cost
-				1) Hardware
-				2) Software
-				3) Management and support
-				4) Communications
-				5) User expenses
-				6) Service downtime
-				7) Training
-				8) Etc.
-		c. Best practices for managing Google Cloud costs
-			i. Identify the individual or team that will manage costs
-			ii. Learn the difference between invoices and cost tools
-			iii. Use cost management tools for accountability
-				1) Built-in reporting tools
-				2) Custom Dashboards
-				3) Pricing Calculator
-	2. Security in the cloud
-		a. Fundamental terms: Privacy, security, compliance and availability
-			i. Privacy
-			ii. Security - Data security
-			iii. Compliance - adhering to regulatory bodies edicts
-			iv. Availability - reliability of a service. How much time a cloud service provider guarantees your data and services are accessible
-			v. You own your data
-			vi. Google does not sell customer data to third parties
-			vii. All customer data is encrypted by default
-			viii. Google Cloud guards against insider access to your data
-			ix. Google never gives any government entity a backdoor to your data
-			x. Google's privacy practices are audited against international standards
-		b. Today's top cyber security challenges
-			i. Phishing attacks
-			ii. Physical damage
-			iii. Malware
-			iv. Unsecured third party systems
-			v. Misconfiguration
-				1) The single biggest threat to cloud security
-		c. Share Responsibility Model
-			i. Defense in depth - Google Cloud's multi layer approach to security
-				1) Hardware - Google designs it own servers, storage, networking, and manufactures almost all components
-				2) Software
-					a) Titan - embedded chip that checks a machine for security and integrity
-				3) Storage
-					a) Encryption at rest, all data at rest is encrypted by default
-						i) DEK - Data Encryption Key
-						ii) Encrypted DEK or Wrapped Encryption Key --> KEK - Key Encryption Key
-				4) Identity
-					a) Zero trust model
-				5) Network
-					a) Encryption in transit
-				6) Operations
-					a) Google staff monitor the systems 24/7/365
-				7) Privacy, Security, Compliance, Availability
-				8) IT teams need to have a full understanding of who can access what data
-				9) MFA - Multi Factor Authentication
-				10) Security Key
-		d. Identity and Access Management (IAM)
-			i. Cloud Identity is a google cloud solution
-			ii. Who can do what on which resource
-				1) Who - Group, account, 
-				2) Can do what - Role --> basic, predefined, custom
-					a) Basic: Owner, Editor, Viewer
-					b) Predefined: 
-					c) Custom: use a least privilege model when granting permissions
-		e. Resource hierarchy
-			i. Refers to the way your IT team can organize your business' Google Cloud environment and how that service structure maps to your organization's actual structure
-				1) 
-			ii. Everything managed in Google Cloud is under a domain and an organization.
-			iii. The domain is handled through Cloud Identity and helps manage user profiles.
-			iv. The organization is managed through the Cloud Console and let's administrators see and control Google Cloud resources and permissions
-				1) 
-			v. Projects belong to the organization rather than the user that created them.
-			vi. Projects are used for grouping Google Cloud resources like Cloud Storage buckets.
-				1) It can inherit permissions from any folders above it as well as from the organization at the top, making it easy to set organization wide rules and policies that cascade down and are enforced throughout the hierarchy
-	3. Monitoring cloud IT services and operations
-		a. IT development and operations challenges
-			i. Adjust expectations for service availability
-			ii. Adopt best practices from DevOps and Site Reliability Engineering
-			iii. SLA = Service Level Agreement
-			iv. SLO = Service Level Objective
-			v. SLI = Service Level Indicator
-				1) A measure of the service provided
-			vi. Error Budget = The amount of error that a service provider can accumulate over a certain period of time before end users start feeling unhappy
-				1) Error Budget = Space between SLA and SLO
-		b. DevOps and SRE
-			i. DevOps, or Developer Operations, is a philosophy that seeks to create a more collaborative and accountable culture within developer and operations teams.
-				1) Google's 5 Objectives of DevOps
-					a) Reduce silos
-					b) Accept failure as normal
-					c) Implement gradual change
-					d) Leverage tooling and automation
-					e) Measure everything
-			ii. Site Reliability Engineering, or SRE, is a discipline that applies aspects of software engineering to operations. Their goal is to create ultra scalable and highly reliable software systems
-			iii. SRE shifts the mindset from 100% availability to 99.9999%
-			iv. DevOps and SRE have the same outcomes
-		c. Google Cloud resource monitoring tools
-			i. Google Cloud's Operation Suite
-				1) Monitor
-				2) Troubleshoot
-				3) Improve application performance
-				4) Operation-focused tools
-					a) Cloud Monitoring
-					b) Cloud Logging
-					c) Error Reporting
-					d) Service Monitoring
-				5) Application performance management tools
-					a) Cloud Trace
-					b) Cloud Profiler
-	
-Practice Questions and Answers
-	1. Your organization has a global application running on Compute Engine. Your application contains a certain file that must be shared between multiple virtual-machine instances and zones. Which service or feature should you choose?
-		a. Cloud Storage - because Cloud Storage buckets are the most flexible, scalable, and durable storage option for your VM instances and should be used when you must share data easily between multiple instances or zones.
-	2. Your organization has multiple teams. Each team works independently on projects. Your Google Cloud resource hierarchy must be structured so that each team only has access to its own resources. What structure should you create?
-		a. One folder per team - because folders can be used to isolate requirements for different departments and teams in the parent organization.
-		
+| Cloud Provider | Customer |
+| ----------- | ----------- |
+| Hardware | Configurations |
+| Networks | Access policies |
+| Physical security | User data |
