--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -1,5 +1,5 @@
 # About
 
-Hey there, this is my notes app where you will find notes I take on intersting developer topics. 
+Hey there, this is my notes app where you will find notes I take on interesting developer topics. 
 
 For more information about who I am and what I do, you can check out the main app at https://www.salmanmalik.co/
