fixed welcome page

--- a/pages/about.mdx
+++ b/pages/about.mdx
@@ -2,4 +2,16 @@
 
 Hey there, this is my notes app where you will find notes I take on interesting developer topics. 
 
+## Contact
 For more information about who I am and what I do, you can check out the main app at https://www.salmanmalik.co/
+
+
+This app was built using Nextra
+
+## What is Nextra?
+
+A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
+
+## Documentation
+
+The documentation is available at [https://nextra.site](https://nextra.site).
