--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,13 +1,6 @@
-# Introduction
+# Welcome
  
 Welcome to Just Da Notes. This app is intended to share notes taken on interesting developer topics, from every day functions, to methodology, architecture, design and even certifications.
 
-Feel free to browse. This app was built using Nextra.
+Feel free to browse using the menu.
 
-## What is Nextra?
-
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
-
-## Documentation
-
-The documentation is available at [https://nextra.site](https://nextra.site).
